Timeline Fix
- Is it too much to ask for?

--- a/timeline_css/component.css
+++ b/timeline_css/component.css
@@ -118,7 +118,7 @@
 	text-align: center;
 	left: 20%;
 	top: 0;
-	margin: 0 0 0 -25px;
+	margin: 0 0 0 -234px;
 }
 
 .cbp_tmicon-phone:before {
